--- a/42/ExpertSystem/hdezier/Makefile
+++ b/42/ExpertSystem/hdezier/Makefile
@@ -14,6 +14,11 @@ RM = rm -rf
 
 #List classes here
 CLASS = main\
+		Tokens/TNegation\
+		Tokens/TPriorities\
+		Tokens/TContextMark\
+		Tokens/TOperand\
+		Tokens/TOperator\
 		Tokens/TEntity\
 		Tokens/TComment\
 		/Parser\
