--- a/42/ft_p/hdezier/server/libft/Makefile
+++ b/42/ft_p/hdezier/server/libft/Makefile
@@ -23,7 +23,7 @@ FILES = ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c \
 		ft_putstr.c ft_putendl.c ft_putnbr.c ft_putchar_fd.c ft_putstr_fd.c \
 		ft_putendl_fd.c ft_putnbr_fd.c ft_lstnew.c ft_lstdelone.c ft_lstdel.c \
 		ft_lstadd.c ft_lstiter.c ft_lstmap.c ft_lstlen.c ft_get_line.c \
-		ft_error.c ft_atof.c ft_free_array_str.c
+		ft_error.c ft_atof.c ft_free_array_str.c ft_find_last.c
 SRCS = $(addprefix src/, $(FILES))
 OBJS = $(SRCS:src/%.c=obj/%.o)
 TMPS = $(SRCS:.c=.c~) Makefile~ include/libft.h~
