--- a/42/ft_p/hdezier/Makefile
+++ b/42/ft_p/hdezier/Makefile
@@ -3,90 +3,34 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: hdezier <hdezier@student.42.fr>            +#+  +:+       +#+         #
+#    By: leeios <leeios@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/04/06 13:12:27 by hdezier           #+#    #+#              #
-#    Updated: 2016/04/11 15:46:02 by hdezier          ###   ########.fr        #
+#    Updated: 2016/04/19 20:12:18 by leeios           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
-TARGET = serveur
 
 #Directories
-BIN_DIR = bin
-SRC_DIR = src
-INC_DIR = include
-BUILD_DIR = build
-LIB_DIR =
-
-#Options
-CC = clang
-SRC_EXT = .c
-RM = rm -rf
-
-#List classes here
-CLASS = main\
-		server\
-
-#List interfaces here
-INTERFACE = \
-
-#Auto var
-SRC = $(addsuffix $(SRC_EXT), $(addprefix $(SRC_DIR)/, $(CLASS)))
-OBJ = $(addsuffix .o, $(addprefix $(BUILD_DIR)/, $(CLASS)))
-DEP = $(addsuffix .d, $(addprefix $(BUILD_DIR)/, $(CLASS)))
-
-#Flags
-CFLAGS = -Wall -Wextra -Werror -O3
-LFLAGS =
-
-#Libs
-LIB_LOCAL = \
-			libft\
-
-LIB_GLOBAL = \
-
-LIB_OTHER = \
-			-lft\
-
-LIBS += $(addsuffix /lib, $(addprefix -L, $(LIB_LOCAL)))
-LIBS += $(addprefix -l,$(LIB_GLOBAL))
-LIBS += $(LIB_OTHER)
-
-#Includes
-INC += $(addprefix -I,$(INC_DIR))
-INC += $(addsuffix /include, $(addprefix -I, $(LIB_LOCAL)))
+SERVER_DIR = server
+CLIENT_DIR = client
 
 #RULES
-all : dirbin $(BIN_DIR)/$(TARGET)
+all :
+	make -C $(SERVER_DIR)
+	make -C $(CLIENT_DIR)
 
 clean :
-	make clean -C libft/
-	$(RM) $(BUILD_DIR)
+	make clean -C $(SERVER_DIR)
+	make clean -C $(CLIENT_DIR)
 
 fclean :
-	make fclean -C libft/
-	$(RM) $(BUILD_DIR) $(TARGET) $(BIN_DIR)
+	make fclean -C $(SERVER_DIR)
+	make fclean -C $(CLIENT_DIR)
+
+server:
+	make -C $(SERVER_DIR)
+
+client:
+	make -C $(CLIENT_DIR)
 
 re : fclean all
-
-dirbin:
-	mkdir -p $(BIN_DIR)
-
-.PHONY: all clean fclean re
-
-.SILENT: dirlib dirbuild dirbin
-
-#Build rule
-$(BIN_DIR)/$(TARGET) : $(OBJ)
-	make -C libft/
-	@echo "\n\033[1;4;34mLINK:\033[0m\n"$^"\n\033[36mLinking objects ...\033[0m\n"
-	$(CC) $(CFLAGS) $^ -o $@ $(LIBS)
-	@ln -sf $(BIN_DIR)/$(TARGET) $(TARGET)
-
-#Compilation rule
-$(BUILD_DIR)/%.o: $(SRC_DIR)/%$(SRC_EXT)
-	@mkdir -p $(dir $@)
-	@echo "\n\033[1;4;34mCOMPILE:\033[0m\n"$<"\n\033[36mCompiling src ...\033[0m"
-	$(CC) $(CFLAGS) $(INC) -o $@ -c $<
-
--include $(DEP)
