++cd && put file

--- a/42/ft_p/hdezier/server/data/test/Makefile
+++ b/42/ft_p/hdezier/server/data/test/Makefile
@@ -6,10 +6,10 @@
 #    By: leeios <leeios@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/04/06 13:12:27 by hdezier           #+#    #+#              #
-#    Updated: 2016/04/20 01:37:27 by leeios           ###   ########.fr        #
+#    Updated: 2016/04/20 01:20:20 by leeios           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
-TARGET = serveur
+TARGET = client
 
 #Directories
 BIN_DIR = bin
@@ -25,12 +25,9 @@ RM = rm -rf
 
 #List classes here
 CLASS = main\
-		server\
-		new_client\
-		exec_cmd\
-		log\
-		exec_cd\
-		exec_put\
+		client\
+		read_prompt\
+		send_file\
 
 #List interfaces here
 INTERFACE = \
