--- a/42/Gomoku/hdezier-erobert/Makefile
+++ b/42/Gomoku/hdezier-erobert/Makefile
@@ -1,3 +1,14 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: hdezier <hdezier@student.42.fr>            +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2016/03/23 13:00:48 by hdezier           #+#    #+#              #
+#    Updated: 2016/05/03 03:51:27 by hdezier          ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
 TARGET = gomoku
 
 #Directories
