--- a/42/Gomoku/hdezier-erobert2.0/Makefile
+++ b/42/Gomoku/hdezier-erobert2.0/Makefile
@@ -6,7 +6,7 @@
 #    By: hdezier <hdezier@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/03/23 13:00:48 by hdezier           #+#    #+#              #
-#    Updated: 2016/05/03 02:00:08 by erobert          ###   ########.fr        #
+#    Updated: 2016/05/07 14:36:20 by hdezier          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 TARGET = gomoku
