overflow add sub ok

--- a/42/Abstract VM/hdezier2.0/Makefile
+++ b/42/Abstract VM/hdezier2.0/Makefile
@@ -3,14 +3,14 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: leeios <leeios@student.42.fr>              +#+  +:+       +#+         #
+#    By: hdezier <hdezier@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/05/14 16:44:06 by leeios            #+#    #+#              #
-#    Updated: 2016/05/23 00:26:01 by leeios           ###   ########.fr        #
+#    Updated: 2016/05/24 14:04:37 by hdezier          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-TARGET = runner
+TARGET = abstract-vm
 
 #Directories
 BIN_DIR = bin
@@ -26,10 +26,12 @@ ifeq ($(UNAME), Linux)
 	# do something Linux-y
 	CC = clang++-3.6
 endif
-ifeq ($(UNAME), Solaris)
-	# do something Solaris-y
+
+ifeq ($(UNAME), Darwin)
+	# do something Darwin-y
 	CC = clang++
 endif
+
 SRC_EXT = .cpp
 RM = rm -rf
 
