--- a/42/Nm-otool/hdezier/Makefile
+++ b/42/Nm-otool/hdezier/Makefile
@@ -6,10 +6,10 @@
 #    By: hdezier <hdezier@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/04/06 13:12:27 by hdezier           #+#    #+#              #
-#    Updated: 2016/06/08 03:26:43 by hdezier          ###   ########.fr        #
+#    Updated: 2016/06/08 07:20:25 by hdezier          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
-TARGET = nm
+TARGET = ft_nm
 
 #Directories
 BIN_DIR = bin
@@ -26,9 +26,15 @@ RM = rm -rf
 #List classes here
 CLASS = main\
 		nm\
-		get_char_type\
+		x32/nm_32\
+		x64/nm_64\
+		x32/get_char_type_32\
+		x64/get_char_type_64\
+		x32/print_nlst_32\
+		x64/print_nlst_64\
+		FAT/nm_fat\
+		arch/nm_arch\
 		sort_nlst\
-		print_nlst\
 		type_to_char\
 
 #List interfaces here
