--- a/42/malloc/shedelin/Makefile
+++ b/42/malloc/shedelin/Makefile
@@ -10,9 +10,14 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME = libft_malloc_x86_64.so
+ifeq ($(HOSTTYPE),)
+	HOSTTYPE := $(shell uname -m)_$(shell uname -s)
+endif
 
-CC = /usr/local/bin/gcc
+TARGET = libft_malloc.so
+TARGET_HOST = libft_malloc_$(HOSTTYPE).so
+
+CC = gcc
 
 FLAGS = -Wall -Wextra -Werror -g -ggdb
 
@@ -28,14 +33,17 @@ SRC = free.c \
       
 OBJ = $(SRC:.c=.o)
 
-all: init $(NAME)
+test: all
+	@gcc -L. -o a.out test_malloc/main.c -lft_malloc
+
+all: init $(TARGET) link_hosttype
 
 init:
 	@make -s -C $(DIRLIB)
-	@echo "\033[0;32m 					$(NAME) PROJECT\033[0m"
+	@echo "\033[0;32m 					$(TARGET) PROJECT\033[0m"
 
 
-$(NAME): $(OBJ)
+$(TARGET): $(OBJ)
 	@$(CC) $(FLAGS) -o $@ --shared $^ -I$(DIRLIB)$(DIRH) -I$(DIRH) -g -L$(DIRLIB) -lft 
 	@echo "\033[1;32m Malloc lib done: OK\033[0m"
 
@@ -48,9 +56,12 @@ clean:
 	@echo "\033[4;32mDeleted:\033[0;33m $(OBJ)\033[0m"
 
 fclean: clean
-	@rm -f $(NAME)
-	@echo "\033[4;32mDeleted:\033[0;33m $(NAME)\033[0m"
+	@rm -f $(TARGET) $(TARGET_HOST)
+	@echo "\033[4;32mDeleted:\033[0;33m $(TARGET)\033[0m"
 
 re: fclean all
+
+link_hosttype :
+	@ln -sF $(TARGET) $(TARGET_HOST)
 
 .PHONY: all clean fclean re
