--- a/42/ft_linear_regression/hdezier/Makefile
+++ b/42/ft_linear_regression/hdezier/Makefile
@@ -6,7 +6,7 @@
 #    By: hdezier <hdezier@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/05/14 16:44:06 by leeios            #+#    #+#              #
-#    Updated: 2016/08/27 17:54:16 by hdezier          ###   ########.fr        #
+#    Updated: 2016/08/27 19:50:02 by hdezier          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -61,19 +61,34 @@ LIB_LOCAL = \
 
 LIB_GLOBAL = \
 
-LIB_OTHER =
+LIB_OTHER = `util/SDL2-2.0.4/build/sdl2-config --cflags --libs`\
 
 LIBS += $(addsuffix /lib, $(addprefix -L, $(LIB_LOCAL)))
 LIBS += $(addprefix -l,$(LIB_GLOBAL))
-# LIBS += $(LIB_OTHER)
+LIBS += $(LIB_OTHER)
 
 #Includes
 INC += $(addprefix -I,$(INC_DIR))
 INC += $(addsuffix /include, $(addprefix -I, $(LIB_LOCAL)))
-INC +=
+INC += -Iutil/SDL2-2.0.4/include
 
 #RULES
-all : dirbin $(BIN_DIR)/$(TARGET)
+all : make_sdl dirbin $(BIN_DIR)/$(TARGET)
+
+make_sdl :
+	if [ -d "./util/SDL2-2.0.4" ]; then \
+		echo "Library directory already exists";\
+	else\
+		echo "Extract and compile SDL" &&\
+		cd util &&\
+		tar -xzf SDL2-2.0.4.tar.gz &&\
+		cd SDL2-2.0.4 &&\
+		mkdir build &&\
+		cd build &&\
+		CC=../build-scripts/gcc-fat.sh ../configure --prefix=`pwd` &&\
+		make &&\
+		make install;\
+	fi
 
 clean :
 	$(RM) $(BUILD_DIR)
@@ -88,7 +103,7 @@ dirbin:
 
 .PHONY: all clean fclean re
 
-.SILENT: dirlib dirbuild dirbin make_lib
+.SILENT: dirlib dirbuild dirbin make_sdl
 
 #Build rule
 $(BIN_DIR)/$(TARGET) : $(OBJ)
