--- a/42/ft_linear_regression/hdezier/Makefile
+++ b/42/ft_linear_regression/hdezier/Makefile
@@ -6,118 +6,28 @@
 #    By: hdezier <hdezier@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/05/14 16:44:06 by leeios            #+#    #+#              #
-#    Updated: 2016/08/27 20:58:01 by hdezier          ###   ########.fr        #
+#    Updated: 2016/08/28 19:28:14 by hdezier          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-TARGET = ft_linear_regression
-
-#Directories
-BIN_DIR = bin
-SRC_DIR = src
-INC_DIR = include
-BUILD_DIR = build
-LIB_DIR =
-
-#Options
-UNAME := $(shell uname)
-
-ifeq ($(UNAME), Linux)
-	# do something Linux-y
-	CC = clang++-3.6
-endif
-
-ifeq ($(UNAME), Darwin)
-	# do something Darwin-y
-	CC = clang++
-endif
-
-SRC_EXT = .cpp
-RM = rm -rf
-
-#List classes here
-CLASS = main\
-		CsvLineParser\
-		LinearRegression2D\
-		SDL_linear\
-
-#List interfaces here
-INTERFACE = \
-
-#Auto var
-SRC = $(addsuffix $(SRC_EXT), $(addprefix $(SRC_DIR)/, $(CLASS)))
-OBJ = $(addsuffix .o, $(addprefix $(BUILD_DIR)/, $(CLASS)))
-DEP = $(addsuffix .d, $(addprefix $(BUILD_DIR)/, $(CLASS)))
-
-#Flags
-CFLAGS = -Wall -Wextra -Werror\
-		-fno-unwind-tables -fno-rtti\
-		-O3\
-		-std=c++14\
-
-LFLAGS =
-
-#Libs
-LIB_LOCAL = \
-
-LIB_GLOBAL = \
-
-LIB_OTHER = `util/SDL2-2.0.4/build/sdl2-config --cflags --libs`\
-
-LIBS += $(addsuffix /lib, $(addprefix -L, $(LIB_LOCAL)))
-LIBS += $(addprefix -l,$(LIB_GLOBAL))
-LIBS += $(LIB_OTHER)
-
-#Includes
-INC += $(addprefix -I,$(INC_DIR))
-INC += $(addsuffix /include, $(addprefix -I, $(LIB_LOCAL)))
-INC += -Iutil/SDL2-2.0.4/include
-
-SDL_DIR = util/SDL2-2.0.4
-
 #RULES
-all : make_sdl dirbin $(BIN_DIR)/$(TARGET)
-
-make_sdl :
-	if [ -d "./util/SDL2-2.0.4" ]; then \
-		echo "Library directory already exists";\
-	else\
-		echo "Extract and compile SDL" &&\
-		cd util &&\
-		tar -xzf SDL2-2.0.4.tar.gz &&\
-		cd SDL2-2.0.4 &&\
-		mkdir build &&\
-		cd build &&\
-		CC=../build-scripts/gcc-fat.sh ../configure --prefix=`pwd` &&\
-		make &&\
-		make install;\
-	fi
+all : dirinternal
+	make all -C EstimatePrice
+	make all -C LinearRegression
+	make all -C DrawData
 
 clean :
-	$(RM) $(BUILD_DIR)
+	make clean -C EstimatePrice
+	make clean -C LinearRegression
+	make clean -C DrawData
 
 fclean :
-	$(RM) $(BUILD_DIR) $(TARGET) $(BIN_DIR) $(SDL_DIR)
+	make fclean -C EstimatePrice
+	make fclean -C LinearRegression
+	make fclean -C DrawData
 
 re : fclean all
 
-dirbin:
-	mkdir -p $(BIN_DIR)
+dirinternal:
+	mkdir -p internal
 
-.PHONY: all clean fclean re
-
-.SILENT: dirlib dirbuild dirbin make_sdl
-
-#Build rule
-$(BIN_DIR)/$(TARGET) : $(OBJ)
-	@echo "\n\033[1;4;34mLINK:\033[0m\n"$^"\n\033[36mLinking objects ...\033[0m\n"
-	$(CC) $(CFLAGS) $^ -o $@ $(LIBS)
-	@ln -sf $(BIN_DIR)/$(TARGET) $(TARGET)
-
-#Compilation rule
-$(BUILD_DIR)/%.o: $(SRC_DIR)/%$(SRC_EXT)
-	@mkdir -p $(dir $@)
-	@echo "\n\033[1;4;34mCOMPILE:\033[0m\n"$<"\n\033[36mCompiling src ...\033[0m"
-	$(CC) $(CFLAGS) $(INC) -o $@ -c $<
-
--include $(DEP)
